fix list spacing for search/error page

--- a/style/default.css
+++ b/style/default.css
@@ -1,4 +1,3 @@
-   
 @media screen {
     #jupiterHorizontalScroller , #marsHorizontalScroller{
         width: 890px;
@@ -626,4 +625,8 @@ input[type=date]::-webkit-inner-spin-button {
 
 #privacy h1, #error404 h1 {
     margin-bottom: 40px;
+}
+
+#Search\20 results ul li{
+    margin-bottom: 20px;
 }
